--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,7 +5,7 @@
   background-position: center;
   background-size: cover;
   width: 100%; 
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
